Fix header layout for smaller display sizes
Signed-off-by: tdruez <tdruez@nexb.com>

--- a/templates/license_list.html
+++ b/templates/license_list.html
@@ -14,15 +14,15 @@
       <thead>
         <tr>
           <th>Key</th>
-          <th>Short Name</th>
-          <th>SPDX Identifier</th>
+          <th>Short name</th>
+          <th>SPDX identifier</th>
           <th>
             <div class="popover popover-top">
               <a class="help_text" href="#popovers">Category</a>
               <div class="popover-container" style="font-weight: normal;">
                 <div class="card">
                   <div class="card-body">
-                    <a href="help.html#license-categories">Click here for help</a> about Categories.
+                    <a href="help.html#license-categories">Click here for help</a> about categories.
                   </div>
                 </div>
               </div>
