--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
       <a href="https://github.com/nexB/scancode-licensedb" target="_blank" class="btn btn-link">GitHub</a>
       <span class="nav-item">Licensed under <a href="cc-by-4.0.html" class="text-bold">CC-BY-4.0</a></span>
     </section>
-    <section id="search-section" class="navbar-section">
+    <section id="search-section">
       <div class="input-group input-inline">
         <button class="btn btn-primary input-group-btn disabled" tabindex="-1" style="opacity: 0.9">Search</button>
         <input id="searchbox" class="form-input" type="search">
