Update LicenseDB footer text with info
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/src/licensedcode/templates/footer.html
+++ b/src/licensedcode/templates/footer.html
@@ -8,5 +8,6 @@
     </p>
     <p>Designed and built by <a href="https://www.nexb.com/" target="_blank">nexB</a>. Licensed under the <a href="cc-by-4.0.html">Creative Commons Attribution License 4.0 (CC-BY-4.0)</a>.</p>
     <p>Generated with <a href="https://github.com/nexB/scancode-toolkit" target="_blank">ScanCode toolkit</a> {{ scancode_version }} on {{ now }}.</p>
+    <p>This is updated daily automatically with latest updates from the develop branch of scancode-toolkit, if any.</p>
   </footer>
 </div>
